--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,4 @@
 {
   "files": [],
-  "references": [{"path": "./tsconfig.app.json"}, {"path": "./tsconfig.node.json"}],
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "@pages/*": ["pages/*"],
-      "@components/*": ["components/*"],
-      "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"],
-      "@utils/*": ["utils/*"]
-    }
-  }
+  "references": [{"path": "./tsconfig.app.json"}, {"path": "./tsconfig.node.json"}]
 }
